--- a/app/src/main/res/drawable-hdpi/btnback2.xml
+++ b/app/src/main/res/drawable-hdpi/btnback2.xml
@@ -4,17 +4,18 @@
     <item android:id="@+id/back_layer">
         <shape android:shape="rectangle">
             <corners android:radius="10dp" />
-            <solid android:color="@color/markercolor" />
+            <solid android:color="@color/navy2" />
         </shape>
     </item>
 
-    <item android:id="@+id/front" android:bottom="5dp">
+    <item
+        android:id="@+id/front"
+        android:bottom="3dp">
 
         <shape android:shape="rectangle">
             <stroke
-                android:color="@color/markercolor"
                 android:width="1dp"
-                />
+                android:color="@color/navy2" />
             <corners android:radius="5dp" />
             <solid android:color="@color/white" />
         </shape>
