--- a/app/src/main/res/drawable/ripplebackgorund.xml
+++ b/app/src/main/res/drawable/ripplebackgorund.xml
@@ -1,5 +1,7 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:color="#008080">
-    <item android:drawable="@color/white" />
+    <item
+        android:id="@android:id/mask"
+        android:drawable="@color/white" />
 </ripple>
