--- a/app/src/main/res/layout/add_jobadvert_step1.xml
+++ b/app/src/main/res/layout/add_jobadvert_step1.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="10dp"
     android:paddingEnd="10dp"
     android:paddingStart="10dp"
-    android:paddingTop="10dp">
+    android:paddingTop="5dp">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -20,19 +20,24 @@
             android:focusableInTouchMode="true">
 
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/card2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginTop="20dp"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginEnd="2dp"
                     android:minHeight="250dp"
-                    app:cardCornerRadius="3dp"
-                    app:cardElevation="2dp"
-                    app:contentPadding="5dp">
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="3dp"
+                    app:contentPadding="8dp">
+
 
                     <EditText
                         android:id="@+id/jobDescprictiontext"
@@ -61,11 +66,13 @@
                     android:id="@+id/card1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/card2"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginTop="20dp"
-                    app:cardCornerRadius="3dp"
-                    app:cardElevation="2dp"
-                    app:contentPadding="10dp">
+                    android:layout_marginStart="2dp"
+                    android:layout_marginEnd="2dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="3dp"
+                    app:contentPadding="8dp">
 
                     <RelativeLayout
                         android:layout_width="wrap_content"
@@ -75,8 +82,10 @@
                             android:id="@+id/sektorText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="15dp"
                             android:hint="Örn: Yazılım,Bankacılık,Hizmet,Temizlik.."
+                            android:imeOptions="actionDone"
+                            android:singleLine="true"
                             android:textColor="@color/Tomato"
                             android:textColorHint="@color/mycolor"
                             android:textSize="15sp"
@@ -104,20 +113,23 @@
                     android:id="@+id/card3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/card1"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="20dp"
-                    app:cardCornerRadius="3dp"
-                    app:cardElevation="2dp"
-                    app:contentPadding="10dp">
+                    android:layout_marginStart="2dp"
+                    android:layout_marginEnd="2dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="3dp"
+                    app:contentPadding="8dp">
 
 
                     <EditText
                         android:id="@+id/arananMeslekText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="15dp"
                         android:hint="Örn: Bilgisayar Mühendisi,Güvenlik Görevlisi"
+                        android:imeOptions="actionDone"
+                        android:singleLine="true"
                         android:textColor="@color/Tomato"
                         android:textColorHint="@color/mycolor"
                         android:textSize="15sp"
@@ -127,57 +139,60 @@
                 </android.support.v7.widget.CardView>
 
 
-            </RelativeLayout>
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/jobDescprictiontv"
-                android:layout_width="match_parent"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/purpleback"
+                android:background="@drawable/tag_back"
+                android:backgroundTint="@color/white"
+                android:elevation="5dp"
+                android:fontFamily="casual"
                 android:padding="5dp"
                 android:text="İş Tanımı"
                 android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="15sp"
                 app:layout_anchor="@+id/card2"
-                app:layout_anchorGravity="top"
+                app:layout_anchorGravity="top|center"
 
 
                 />
 
             <TextView
                 android:id="@+id/arananMeslek"
-                android:layout_width="match_parent"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/yellowback"
+                android:background="@drawable/tag_back"
+                android:backgroundTint="@color/white"
+                android:elevation="5dp"
+                android:fontFamily="casual"
                 android:padding="5dp"
                 android:text="Aranan Meslek"
                 android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="15sp"
-
                 app:layout_anchor="@+id/card3"
-                app:layout_anchorGravity="top"
+                app:layout_anchorGravity="top|center"
 
                 />
 
             <TextView
                 android:id="@+id/sektor"
-                android:layout_width="match_parent"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/greenback"
+                android:background="@drawable/tag_back"
+                android:backgroundTint="@color/white"
+                android:elevation="5dp"
+                android:fontFamily="casual"
                 android:padding="5dp"
                 android:text="Sektör Bilgisi"
                 android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="15sp"
                 app:layout_anchor="@+id/card1"
-
-                app:layout_anchorGravity="top"
-
+                app:layout_anchorGravity="top|center"
 
                 />
 
