--- a/app/src/main/res/layout/add_jobadvert_step2.xml
+++ b/app/src/main/res/layout/add_jobadvert_step2.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="5dp"
-    android:paddingEnd="3dp"
-    android:paddingStart="1dp"
+
     android:paddingBottom="5dp">
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nestedScroll_step2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:isScrollContainer="true">
@@ -18,14 +18,15 @@
             android:layout_height="match_parent"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:padding="3dp">
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:descendantFocusability="blocksDescendants"
                 android:orientation="vertical">
 
-                <include layout="@layout/egitimseviyesi" ></include>
+                <include layout="@layout/add_jobadvert_step2_content" ></include>
 
             </LinearLayout>
 
