--- a/app/src/main/res/layout/add_jobadvert_step2_content.xml
+++ b/app/src/main/res/layout/add_jobadvert_step2_content.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="3dp"
+        app:cardElevation="3dp"
         app:cardPreventCornerOverlap="true">
 
         <RelativeLayout
@@ -23,7 +24,7 @@
 
             <View
                 android:layout_width="10dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="-5dp"
                 android:background="@drawable/half_circle"
@@ -62,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        android:background="@drawable/statebutton_md_lightgreenbg_loading"
+        android:background="@drawable/statebutton_md_lightgreenbg_disabled"
         android:visibility="gone">
 
         <include layout="@layout/snippet_egitimseviyesi"></include>
@@ -89,6 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         app:cardCornerRadius="3dp"
+        app:cardElevation="3dp"
         app:cardPreventCornerOverlap="true">
 
         <RelativeLayout
@@ -140,7 +142,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        android:background="@drawable/statebutton_md_lightgreenbg_loading"
+        android:background="@drawable/statebutton_md_lightgreenbg_disabled"
         android:visibility="gone">
 
         <include layout="@layout/snippet_experience"></include>
@@ -153,6 +155,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         app:cardCornerRadius="3dp"
+        app:cardElevation="3dp"
         app:cardPreventCornerOverlap="true">
 
         <RelativeLayout
@@ -204,7 +207,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        android:background="@drawable/statebutton_md_lightgreenbg_loading"
+        android:background="@drawable/statebutton_md_lightgreenbg_disabled"
         android:visibility="gone">
 
         <include layout="@layout/snippet_calismasekli"></include>
@@ -215,9 +218,10 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginTop="15dp"
         app:cardCornerRadius="3dp"
+        app:cardElevation="3dp"
         app:cardPreventCornerOverlap="true">
 
         <RelativeLayout
@@ -269,7 +273,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        android:background="@drawable/statebutton_md_lightgreenbg_loading"
+        android:background="@drawable/statebutton_md_lightgreenbg_disabled"
         android:visibility="gone">
 
         <include layout="@layout/snippet_ekstra"></include>
