--- a/app/src/main/res/layout/add_jobadvert_step3.xml
+++ b/app/src/main/res/layout/add_jobadvert_step3.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:isScrollContainer="true"
-    android:fillViewport="true"
     android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:isScrollContainer="true"
 
     >
 
@@ -34,7 +34,39 @@
                 android:text="Sectikleriniz"
                 android:textColor="@color/black" />
 
-            <include layout="@layout/possibility_textview"></include>
+            <ViewSwitcher
+                android:id="@+id/viewSwitch_possiblity"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center">
+
+                    <ImageView
+                        android:id="@+id/emptyImage"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/info" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="15dp"
+                        android:layout_toEndOf="@id/emptyImage"
+                        android:text="ABİ SEN BANA İMKAN VERMİYOSUN YOKSA ON NUMARA ÇALIŞIRIM ABİ "
+                        android:textAlignment="center" />
+
+                </RelativeLayout>
+
+                <include layout="@layout/possibility_textview"></include>
+
+            </ViewSwitcher>
+
+
 
         </LinearLayout>
 
