--- a/app/src/main/res/layout/edit_yetenek.xml
+++ b/app/src/main/res/layout/edit_yetenek.xml
@@ -1,114 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:clickable="true"
-    android:focusable="true"
-    android:background="@drawable/dialogcorner"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:orientation="vertical">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:background="@drawable/dialogtitle"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/closeDialog"
-            android:layout_width="24dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="-20dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerInParent="true"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_close_black_24dp"
-            android:tint="@color/black" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:padding="12dp"
-            android:text="Yetenekler"
-            android:textColor="@color/cardview_dark_background"
-            android:textSize="20sp"
-            android:textStyle="bold|italic" />
-    </RelativeLayout>
-
     <LinearLayout
-        android:id="@+id/eklenecekYetenek"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/dialogcorner"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/yetenek_content"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/edittext_back"
-            android:lineSpacingExtra="4dp"
-            android:lines="2"
-            android:paddingLeft="7dp"
-            android:hint="Yetkinlik "
-            android:textColor="@color/blue"
-            android:textSize="14sp" />
+            android:background="@drawable/dialogtitle">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:orientation="horizontal"
-            android:padding="3dp"
-            android:weightSum="1">
+            <ImageView
+                android:id="@+id/closeDialog"
+                android:layout_width="24dp"
+                android:layout_height="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="-20dp"
+                android:src="@drawable/ic_close_black_24dp"
+                android:tint="@color/black" />
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="0.8"
-                android:text="Seviye"
+                android:layout_centerHorizontal="true"
+                android:padding="12dp"
+                android:text="Yetenekler"
                 android:textColor="@color/cardview_dark_background"
                 android:textSize="20sp"
                 android:textStyle="bold|italic" />
+        </RelativeLayout>
 
-            <RatingBar
-                android:id="@+id/yetenekRatingBar"
+        <LinearLayout
+            android:id="@+id/eklenecekYetenek"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/yetenek_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/edittext_back"
+                android:hint="Yetkinlik "
+                android:lineSpacingExtra="4dp"
+                android:lines="2"
+                android:paddingLeft="7dp"
+                android:textColor="@color/blue"
+                android:textSize="14sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:orientation="horizontal"
+                android:padding="3dp"
+                android:weightSum="1">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="0.8"
+                    android:text="Seviye"
+                    android:textColor="@color/cardview_dark_background"
+                    android:textSize="20sp"
+                    android:textStyle="bold|italic" />
+
+                <RatingBar
+                    android:id="@+id/yetenekRatingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:numStars="5"
+                    android:scaleX="0.8"
+                    android:scaleY="0.8"
+                    android:stepSize="1.0"
+                    android:theme="@style/RatingBar" />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/yetenekSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:numStars="5"
-                android:scaleY="0.8"
-                android:scaleX="0.8"
-                android:stepSize="1.0"
-                android:theme="@style/RatingBar" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/statebutton_md_amberbg_loading"
+                android:drawableLeft="@drawable/ic_add_black_24dp"
+                android:padding="10dp"
+                android:text="Kaydet"
+                android:theme="@style/ButtonStyle" />
+
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/yetenekSave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/roundedbutton"
-            android:padding="10dp"
-            android:drawableLeft="@drawable/ic_add_black_24dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
-            android:text="Kaydet"
-            android:theme="@style/ButtonStyle" />
-
-
     </LinearLayout>
-
-</LinearLayout>
 
 </LinearLayout>
