--- a/app/src/main/res/layout/possibility_textview.xml
+++ b/app/src/main/res/layout/possibility_textview.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/edittext_back"
+            android:background="@drawable/tag_back"
             android:drawableLeft="@drawable/ic_done_all_black_10dp"
             android:drawablePadding="5dp"
             android:padding="5dp"
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/edittext_back"
+            android:background="@drawable/tag_back"
             android:drawableLeft="@drawable/ic_done_all_black_10dp"
             android:drawablePadding="5dp"
             android:padding="5dp"
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/edittext_back"
+            android:background="@drawable/tag_back"
             android:drawableLeft="@drawable/ic_done_all_black_10dp"
             android:drawablePadding="5dp"
             android:padding="5dp"
@@ -66,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/edittext_back"
+            android:background="@drawable/tag_back"
             android:drawableLeft="@drawable/ic_done_all_black_10dp"
             android:drawablePadding="5dp"
             android:padding="5dp"
@@ -91,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/edittext_back"
+            android:background="@drawable/tag_back"
             android:drawableLeft="@drawable/ic_done_all_black_10dp"
             android:drawablePadding="5dp"
             android:padding="5dp"
@@ -108,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/edittext_back"
+            android:background="@drawable/tag_back"
             android:drawableLeft="@drawable/ic_done_all_black_10dp"
             android:drawablePadding="5dp"
             android:padding="5dp"
@@ -125,7 +125,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/edittext_back"
+            android:background="@drawable/tag_back"
             android:drawableLeft="@drawable/ic_done_all_black_10dp"
             android:drawablePadding="5dp"
             android:padding="5dp"
@@ -142,7 +142,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/edittext_back"
+            android:background="@drawable/tag_back"
             android:drawableLeft="@drawable/ic_done_all_black_10dp"
             android:drawablePadding="5dp"
             android:padding="5dp"
