--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="tw__blue_default">#FF5BAAF4</color>
     <color name="tw__blue_pressed">#FF4186C8</color>
      <color name="md_teal_500">#009688</color>
+     <color name="mycolor4">#f6f2df</color>
 
     <color name="tw__light_gray">#ccd6dd</color>
     <color name="tw__solid_white">#FFFFFFFF</color>
