İş ilanlarının kayıt edilmesi ve çekilmesi işlemleri yapıldı.

--- a/app/src/main/res/drawable/duplicatemarker.xml
+++ b/app/src/main/res/drawable/duplicatemarker.xml
@@ -6,7 +6,7 @@
     android:viewportHeight="25.786">
 
     <path
-        android:fillColor="#D80027"
+        android:fillColor="#139411"
         android:pathData="M4.893,0C2.235,0,0.081,2.154,0.081,4.812s3.928,7.397,3.928,10.973h1.83 C5.838,12.222,9.706,7.252,9.706,4.812C9.706,2.154,7.551,0,4.893,0z M4.893,6.91c-1.157,0-2.097-0.94-2.097-2.098 s0.94-2.098,2.097-2.098S6.99,3.654,6.99,4.812S6.05,6.91,4.893,6.91z" />
     <path
         android:fillColor="#D80027"
