--- a/app/src/main/res/drawable/success_placeholders.xml
+++ b/app/src/main/res/drawable/success_placeholders.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="28dp"
+    android:height="28dp"
     android:viewportWidth="512"
     android:viewportHeight="512">
 
     <path
-        android:fillColor="#FF5752"
+        android:fillColor="#9CEA93"
         android:pathData="M243.577,506.461c-7.065-7.868-173.004-194.146-173.004-321.035C70.574,83.182,153.756,0,256.001,0 s185.426,83.182,185.426,185.426c0,126.888-165.939,313.167-173.004,321.035C261.786,513.854,250.199,513.839,243.577,506.461z" />
     <path
-        android:fillColor="#DB3A3C"
+        android:fillColor="#73BA6B"
         android:pathData="M441.426,185.426C441.426,83.182,358.244,0,256.001,0v512c4.552,0,9.106-1.843,12.423-5.539 C275.487,498.594,441.426,312.315,441.426,185.426z" />
     <path
         android:fillColor="#EFEFEF"
@@ -17,4 +17,8 @@
     <path
         android:fillColor="#C5D8DF"
         android:pathData="M256.001,92.134v186.585c51.442,0,93.291-41.851,93.291-93.293S307.441,92.134,256.001,92.134z" />
+
+    <path
+        android:fillColor="#43B05B"
+        android:pathData="M247.172,229.517c-1.766,0-3.531-0.883-5.297-1.766l-44.138-35.31 c-3.531-2.648-4.414-8.828-1.766-12.359c2.648-3.531,8.828-4.414,12.359-1.766l37.076,29.131l56.497-80.331 c2.648-4.414,7.945-5.297,12.359-1.766c4.414,2.648,5.297,7.945,1.766,12.359l-61.793,88.276 C252.469,227.752,250.703,229.517,247.172,229.517C248.055,229.517,247.172,229.517,247.172,229.517z" />
 </vector>
