--- a/app/src/main/res/drawable/circle_fab.xml
+++ b/app/src/main/res/drawable/circle_fab.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:innerRadius="0dp"
-    android:shape="ring"
-    android:thickness="120dp"
-    android:useLevel="false">
-
-    <solid
-
-        android:color="#aaDd" />
-
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@android:id/progress">
+        <shape
+            android:innerRadiusRatio="3"
+            android:shape="ring"
+            android:useLevel="false">
+            <gradient
+                android:centerColor="#ffff00"
+                android:endColor="#00ff00"
+                android:startColor="#fb0000"
+                android:type="sweep" />
+        </shape>
+    </item>
+</layer-list>
