--- a/app/src/main/res/layout/fragment_nested_scroll.xml
+++ b/app/src/main/res/layout/fragment_nested_scroll.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingTop="10dp"
@@ -13,17 +13,27 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/nearJobList"
+        <ViewSwitcher
+            android:id="@+id/nearJobViewSwitch"
             android:layout_width="match_parent"
-            android:layoutAnimation="@anim/layout_animation"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
+
+                <include layout="@layout/empty_job"> </include>
 
 
-        </android.support.v7.widget.RecyclerView>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/nearJobList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layoutAnimation="@anim/layout_animation">
+
+
+            </android.support.v7.widget.RecyclerView>
+        </ViewSwitcher>
+
 
     </LinearLayout>
 
